[gd_scene load_steps=2 format=3 uid="uid://dq16xv3q7580x"]

[ext_resource type="Script" path="res://Scenes/Management Scenes/territory_select/territory_area/RegionArea.gd" id="1_af4p0"]


[node name="Region" type="Area2D"]
script = ExtResource("1_af4p0")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
